<resources>
    <string name="app_name">ToDo App</string>
    <string name="save">SAVE</string>
    <string name="i_need_to_do">I need to do…</string>
    <string name="priority">Priority</string>
    <string name="do_until">Do until</string>
    <string name="delete">Delete</string>
    <string name="tasks_done">Tasks done ―ㅤ</string>
    <string name="add_new_task">Add new task</string>
    <string name="enter_something_first">Enter something first!</string>
    <string name="deleted">Deleted</string>
    <string name="my_tasks">My tasks</string>
    <string name="standard">Standard</string>
    <string name="low">⬇️Low</string>
    <string name="high">‼️HIGH</string>
    <string name="actions">Actions?</string>
    <string name="toast_2_u">Toast 2 U!(Click)</string>
    <string name="goofy_ahh_string">🫠🥴🤪🫡🫣</string>
    <string name="continue_text">Continue</string>
    <string name="failed_to_connect">Failed to connect(retry later)</string>
    <string name="success">Success</string>
    <string name="server_error_try_later">Server error. Try later.</string>
    <string name="synchronizing">This is not supposed to happen...Synchronizing...</string>
    <string name="wrong_auth">Wrong auth!(somehow)</string>
    <string name="saving">Saving...</string>
    <string name="error">Error</string>
    <string-array name="priority">
        <item>🗿Standard</item>
        <item>⬇️Low</item>
        <item>‼️HIGH</item>
    </string-array>
    <string-array name="themes">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="view_pager_text">
        <item>Hello!\n Let me introduce you my ToDo App:)</item>
        <item>It\'s made with ♥️🍕😹</item>
        <item>So, let\'s get started!!!</item>
    </string-array>
    <string name="app_theme">App theme</string>
    <string name="log_out">Log out</string>
    <string name="here_goes_your_ad">Here goes your ad...</string>
    <string name="notify_desc">If you want achieve the best experience of this app, please allow to show notifications. It\'ll let ToDoApp notify you, if your task is expired.</string>
    <string name="skip">Skip</string>
    <string name="oke">Oke!</string>
    <string name="turn_later">You can turn them on in device settings later!</string>
    <string name="enjoy_notifications">Enjoy notifications!</string>
    <string name="drop_notify_prefs">Drop notification prefs</string>
    <string name="submit">Submit</string>
    <string name="postpone">Postpone for day</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
</resources>