<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:id="@+id/task_app_bar">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            style="@style/BlueItems"/>
    </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/task_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:minHeight="100dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/task_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/i_need_to_do"
                    android:textSize="16sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/priority" />

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundColor"
                android:entries="@array/priority"
                android:textSize="14sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="10dp"
                android:background="?attr/dividerColor" />

            <Switch
                android:id="@+id/do_until_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/do_until" />

            <TextView
                android:id="@+id/calendar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text=""
                style="@style/BlueItems"
                android:visibility="invisible"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/dividerColor" />
<!-- Я пробовал(а) создать Button с drawable вместо лишнего LinearLayout,
но это очень криво работало)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/delete_button"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete_imageview"
                    android:layout_margin="20dp"
                    android:clickable="false"
                    android:src="@drawable/delete"
                    app:tint="?attr/color_delete_inactive" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete_textview"
                    android:layout_marginVertical="20dp"
                    android:textSize="16sp"
                    android:clickable="false"
                    android:text="@string/delete"
                    android:textColor="?attr/color_delete_inactive"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>